...
  const handleSubmit = useCallback(() => {
    onLogin(apiKey);
  }, [onLogin, apiKey]);

  return (
    <CollapsibleSection
      testID="login-apikey-section"
      title={t('login.useApiKey')}
      expanded={expanded}
      onToggle={setExpanded}
      icon="key-variant"
      style={styles.apiKeySection}
    >
...
