...
          unacceptedAutoCount={unacceptedAutoCount}
          acceptedAutoCount={acceptedAutoCount}
        />
      </View>

      <FlatList
        testID={regularSections.length > 0 ? 'sections-list' : 'sections-list-empty'}
        style={styles.flatList}
        data={regularSections}
        keyExtractor={(item) => item.id}
        renderItem={renderItem}
        ListHeaderComponent={potentialSections.length > 0 ? renderHeader : null}
        ListEmptyComponent={renderEmpty}
...
