...
  const activityColor = colors.primary;
  const iconName: MaterialIconName = 'road-variant';

  return (
    <>
      <View
        testID="section-detail-screen"
        style={[styles.container, isDark && styles.containerDark]}
      >
        <StatusBar barStyle="light-content" />
        <ScrollView
          ref={scrollRef}
          style={styles.scrollView}
...
